added new transaction module

--- a/src/app/transaction/transaction-list/transaction-list.component.html
+++ b/src/app/transaction/transaction-list/transaction-list.component.html
@@ -1,1 +1,28 @@
-<p>transaction-list works!</p>
+<h1>Transaction List</h1>
+<!-- Filters -->
+<!-- Add Transaction Button -->
+<div>
+    <li  *ngFor="let transaction of transactions$ | async; index as i" >
+        <a [routerLink]="[i]">
+            <span>
+                Credit Card: {{transaction.credit_card.card_number}}
+            </span>
+            <span>
+                Amount: {{transaction.amount}}
+            </span>
+            <span>
+                Currency: {{transaction.currency}}
+            </span>
+        </a>
+    </li>
+</div>
+
+
+<div *ngIf="selectedTransaction">
+    <h2>{{selectedTransaction.credit_card.cardholder_name}}</h2>
+    <span>{{selectedTransaction.amount}}</span>
+    <span>{{selectedTransaction.currency}}</span>
+    <span>{{selectedTransaction.date}}</span>
+    <span>{{selectedTransaction.comment}}</span>
+
+</div>
