Add navigation bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div>
-    <app-nagivation-bar></app-nagivation-bar>
-</div>
+<body>
+  <app-nagivation-bar></app-nagivation-bar>
+
+</body>
 
 <router-outlet></router-outlet>
