--- a/src/app/nagivation-bar/nagivation-bar.component.html
+++ b/src/app/nagivation-bar/nagivation-bar.component.html
@@ -1,4 +1,14 @@
-<p>nagivation-bar works!</p>
+<nav>
+  <div class="nav-bar" fxLayout="row" fxLayoutAlign="start center">
+    <!-- <div class="nav-bar"> -->
+      <a routerLink="home" routerLinkActive="active-nav-item">Home</a>
+      <a routerLink="addCreditCard" routerLinkActive="active-nav-item">Add credit card</a>
+      <a routerLink="transaction" routerLinkActive="active-nav-item">Transactions</a>
+    <!-- </div> -->
 
-<li><a routerLink="transaction">Transaction</a></li>
-RANDI :) :)
+    </div>
+</nav>
+
+
+
+
