--- a/src/app/credit-card/credit-card-list/credit-card-list.component.html
+++ b/src/app/credit-card/credit-card-list/credit-card-list.component.html
@@ -1,15 +1,13 @@
 <p>credit-card-list works!</p>
 <ng-container>
-    <ul>
-        <li *ngFor="let creditcard of creditcards$ |async; let i = index">
-            <a>Card number: </a>
-            <a routerLink=[i]>
-                {{creditcard.card_number}}
-            </a>
-            <p>
-                Cardholder: {{creditcard.cardholder_name}}
-            </p>
-            <p> Card issuer: {{creditcard.issuer}}</p>
-        </li>
-    </ul>
+	<ul>
+		<li *ngFor="let creditcard of creditcards$ |async; let i = index">
+			<div class="cards">
+				<a>Card number: </a>
+				<a routerLink=[i]>{{creditcard.card_number}}</a>
+				<p>Cardholder: {{creditcard.cardholder_name}}</p>
+				<p>Card issuer: {{creditcard.issuer}}</p>
+			</div>
+		</li>
+	</ul>
 </ng-container>
