credit card style outcommented until

--- a/src/app/credit-card/credit-card-list/credit-card-list.component.scss
+++ b/src/app/credit-card/credit-card-list/credit-card-list.component.scss
@@ -1,11 +1,11 @@
 .cards {
     // background-color: lightblue;
-    border-radius: 8px;
-    margin-bottom: 8px;
-    flex-wrap: wrap;
-    display: flex;
-    flex-direction: column;
-    align-content: space-between;
-    justify-content: flex-start;
-    align-items: flex-start;
+    // border-radius: 8px;
+    // margin-bottom: 8px;
+    // flex-wrap: wrap;
+    // display: flex;
+    // flex-direction: column;
+    // align-content: space-between;
+    // justify-content: flex-start;
+    // align-items: flex-start;
 }
