--- a/src/app/transaction/transaction-list/transaction-list.component.html
+++ b/src/app/transaction/transaction-list/transaction-list.component.html
@@ -1,34 +1,33 @@
-<div>
-    <h1>Transaction List</h1>
-    <div><button (click)="onFilter()">Filter</button></div>
-    <!-- Filters: F6.1.4 Transactions must be filtered based on credit_card -->
-    <!-- Add Transaction Button -->
-    <div class="listbox" fxLayout="row" fxLayoutAlign="space-evenly center"
-        *ngFor="let transaction of transactions$ | async; index as i">
-        <div fxLayoutAlign="start start">
-            <p>
-                Name: {{transaction.credit_card.cardholder_name}}
-            </p>
-            <p>
-                Amount: {{transaction.amount}}
-            </p>
-            <p>
-                Currency: {{transaction.currency}}
-            </p>
-            <br>
+<div class="header">
+    <div fxFlex="50">
+        <h1>Transaction List</h1>
+        <div><button (click)="onFilter()">Filter</button></div>
+        <!-- Filters: F6.1.4 Transactions must be filtered based on credit_card -->
+        <!-- Add Transaction Button -->
+        <div class="listbox" fxLayout="row" *ngFor="let transaction of transactions$ | async; index as i"
+            fxLayoutAlign="space-between center">
+            <div>
+                <p>
+                    Name: {{transaction.credit_card.cardholder_name}}
+                </p>
+                <p>
+                    Amount: {{transaction.amount}} Currency: {{transaction.currency}}
+                </p>
+                <p>
+                    Comment: {{transaction.comment}}
+                </p>
+                <p>
+                    Date: {{transaction.date}}
+                </p>
+            </div>
+            <div fxLayoutAlign="space-evenly center">
+                <button (click)="OnDelete(transaction)">
+                    <span>X</span>
+                </button>
+            </div>
         </div>
-        <div fxLayoutAlign="end start">
-            <p>
-                Comment: {{transaction.comment}}
-            </p>
-            <p>
-                Date: {{transaction.date}}
-            </p>
-        </div>
-        <div fxLayout="column">
-            <button class="deleteBtn" (click)="OnDelete(transaction)">
-                <span class="deleteText">Delete</span>
-            </button>
-        </div>
+    </div>
+    <div fxFlex="50">
+
     </div>
 </div>
