--- a/src/app/transaction/transaction-list/transaction-list.component.scss
+++ b/src/app/transaction/transaction-list/transaction-list.component.scss
@@ -1,11 +1,10 @@
+.header{
+    width: 100px;
+}
 .listbox {
     display: flex;
     padding: 0.8em 0.7em 0 0.7em;
-    // line-height: 1em;
-    // position: relative;
-    // left: -1px;
-    // top: -4px;
-    width: fit-content;
+    width: max-content;
     color: white;
     margin: 10px 10px 10px 10px;
     border-radius: 4px;
