--- a/src/app/transaction/transaction-list/transaction-list.component.scss
+++ b/src/app/transaction/transaction-list/transaction-list.component.scss
@@ -1,15 +1,26 @@
-.header{
+.overview-header {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.header {
     width: 100px;
+}
+
+.test {
+    background-color: bisque;
 }
 .listbox {
     display: flex;
-    padding: 0.8em 0.7em 0 0.7em;
-    width: max-content;
+    padding: 10px;
     color: white;
     margin: 10px 10px 10px 10px;
     border-radius: 4px;
     background-color: #b0cece;
     font-size: small;
+}
+.delete-button-header {
+    align-content: flex-end;
 }
 .delete {
     width: 1440px;
