--- a/src/app/credit-card/credit-card-add/credit-card-add.component.html
+++ b/src/app/credit-card/credit-card-add/credit-card-add.component.html
@@ -1,1 +1,60 @@
-<p>credit-card-add works!</p>
+<h2>Add a credit card:</h2>
+<!--Inspiration from course slides (lesson 4) and https://www.freecodecamp.org/news/how-to-validate-angular-reactive-forms/-->
+
+<form [formGroup]="creditCardForm" (ngSubmit)="onSubmit()">
+  <div class="form-wrapper">
+    <div>
+      <label>Cardholder's name:*</label>
+      <input type="text" formControlName="cardholder_name">
+      <span
+        *ngIf="creditCardFormControl.cardholder_name.touched && creditCardFormControl.cardholder_name.errors?.required"
+        class="invalid-field">
+        The name is required!
+      </span>
+    </div>
+    <div>
+      <label>Card number:</label>
+      <input type="text" formControlName="cardNumber" placeholder="0">
+      <!-- hvorfor valideres touched ikke, sammen med pattern og invalidCardNumber?? -->
+      <div class="invalid-field" *ngIf="cardNumber.invalid && (cardNumber.dirty || cardNumber.touched)">
+        <div *ngIf="cardNumber.errors?.invalid_length">
+          {{cardNumber.errors?.invalid_length}}
+        </div>
+      </div>
+    </div>
+    <div formGroupName="expirationDate" fxLayout="row" fxLayoutAlign=" center">
+      <label>Expiration date:</label>
+      <input type="number" formControlName="expiration_date_month" class="date-field">
+       /
+      <input type="number" formControlName="expiration_date_year" class="date-field">
+      <div class="invalid-field" *ngIf="expirationDate.invalid && (expirationDate.dirty || expirationDate.touched)">
+        <div *ngIf="expirationDate.errors?.invalid_date">
+          {{expirationDate.errors?.invalid_date}}
+        </div>
+      </div>
+    </div>
+    <div>
+      <label>CSC code:</label>
+      <input type="text" formControlName="cscCode">
+      <div
+        *ngIf="cscCode.invalid && (cscCode.touched || cscCode.dirty)"
+        class="invalid-field">
+        <div *ngIf="cscCode.errors?.required">
+          This field is required
+        </div>
+        <div *ngIf="cscCode.errors?.pattern">
+          The csc code must be numbers
+        </div>
+        <div *ngIf="cscCode.errors?.minlength || cscCode.errors?.maxlength">
+          The csc code must be three digits long
+        </div>
+      </div>
+    </div>
+    <div>
+      <label>Issuer:</label>
+      <input type="text" formControlName="issuer">
+    </div>
+    <button type="submit">Submit credit card</button>
+  </div>
+
+</form>
