--- a/src/app/nagivation-bar/nagivation-bar.component.html
+++ b/src/app/nagivation-bar/nagivation-bar.component.html
@@ -2,7 +2,7 @@
   <div class="nav-bar" fxLayout="row" fxLayoutAlign="start center">
     <!-- <div class="nav-bar"> -->
       <a routerLink="home" routerLinkActive="active-nav-item">Home</a>
-      <a routerLink="addCreditCard" routerLinkActive="active-nav-item">Add credit card</a>
+      <a routerLink="creditcards/addCreditCard" routerLinkActive="active-nav-item">Add credit card</a>
       <a routerLink="transaction" routerLinkActive="active-nav-item">Transactions</a>
     <!-- </div> -->
 
