--- a/src/app/credit-card/credit-card-add/credit-card-add.component.scss
+++ b/src/app/credit-card/credit-card-add/credit-card-add.component.scss
@@ -1,8 +1,41 @@
+.page {
+  margin-left: 20px;
+}
 .invalid-field {
   color: red;
   font-size: small;
+}
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20pt;
 }
 .date-field {
   width: 35px;
   margin: 0 4px;
 }
+.form-element {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14pt;
+  margin: 4px 0;
+}
+.form-input {
+  margin-left: 4px;
+}
+.submit-btn {
+  background-color: #498787;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12pt;
+  padding: 4px;
+  color: white;
+  &:disabled {
+    color:grey;
+    background-color: #5F9E9F;
+    cursor: not-allowed;
+  }
+  &:hover{
+    background-color: #5F9E9F;
+  }
+
+}
+
