--- a/src/app/transaction/transaction-add/transaction-add.component.html
+++ b/src/app/transaction/transaction-add/transaction-add.component.html
@@ -1,1 +1,40 @@
 <p>transaction-add works!</p>
+<div>
+  <h2>Add a transaction to a credit card:</h2>
+  <div>
+    <form [formGroup]="transactionForm" (ngSubmit)="onSubmit()">
+      <div>
+        <label>Credit card:</label>
+        <select name="creditCard" formControlName="credit_card">
+          <option *ngFor="let creditCard of creditCards$ | async" [ngValue]="creditCard">{{creditCard.cardholder_name}} {{creditCard.card_number}}</option>
+        </select>
+      </div>
+      <div>
+        <label>Amount:</label>
+        <input type="number" formControlName="amount" placeholder="0">
+        <div *ngIf="transactionFormControl.amount.touched && transactionFormControl.amount.invalid">
+          The amount is required
+        </div>
+      </div>
+      <div>
+        <label>Currency:</label>
+        <input type="text" formControlName="currency" placeholder="e.g.: USD">
+        <div *ngIf="transactionFormControl.currency.touched && transactionFormControl.currency.invalid">
+          The currency is required
+        </div>
+      </div>
+      <div>
+        <label>Date:</label>
+        <input type="date" formControlName="date">
+        <div *ngIf="transactionFormControl.date.touched && transactionFormControl.date.invalid">
+          The date is required
+        </div>
+      </div>
+      <div>
+        <label>Comment:</label>
+        <input type="text" formControlName="comment">
+      </div>
+      <button type="submit" class="submit-btn" [disabled]="transactionForm.invalid">Submit credit card</button>
+    </form>
+  </div>
+</div>
