--- a/src/app/credit-card/credit-card-details/credit-card-details.component.html
+++ b/src/app/credit-card/credit-card-details/credit-card-details.component.html
@@ -1,1 +1,8 @@
-<p>credit-card-details works!</p>
+<p>credit-card-details page</p>
+<h2>Card Number: {{creditCard.card_number}}</h2>
+<div>
+     <p>Card Holder: {{creditCard.cardholder_name}}</p>
+     <p>csc code: {{creditCard.csc_code}}</p> 
+     <p>expiration date: {{creditCard.expiration_date_month}}/{{creditCard.expiration_date_year}}</p>
+     <p>Card issuer: {{creditCard.issuer}}</p>
+</div>
