added removeCard + routing for card-details

--- a/src/app/credit-card/credit-card-list/credit-card-list.component.html
+++ b/src/app/credit-card/credit-card-list/credit-card-list.component.html
@@ -3,7 +3,7 @@
 		<li *ngFor="let creditcard of creditcards$ |async; let i = index">
 			<div class="cards">
 				<a>Card number: </a>
-				<a [routerLink]="i+''" [state]="creditcard">{{creditcard.card_number}}</a>
+				<a [routerLink]="['../creditcards', i]" [state]="creditcard">{{creditcard.card_number}}</a>
 				<p>Cardholder: {{creditcard.cardholder_name}}</p>
 				<p>Card issuer: {{creditcard.issuer}}</p>
 			</div>
