--- a/src/app/transaction/transaction-list/transaction-list.component.scss
+++ b/src/app/transaction/transaction-list/transaction-list.component.scss
@@ -2,6 +2,10 @@
     display: flex;
     justify-content: space-evenly;
 }
+.search-text {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16pt;
+}
 
 .header {
     width: 100px;
