--- a/src/app/credit-card/credit-card-list/credit-card-list.component.scss
+++ b/src/app/credit-card/credit-card-list/credit-card-list.component.scss
@@ -9,3 +9,8 @@
 //     // justify-content: flex-start;
 //     // align-items: flex-start;
 // }
+
+.overview-header {
+    display: flex;
+    justify-content: space-evenly;
+}
