Add credit card list layout. Add text to home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,6 @@
-<p>home works!</p>
+<h3 class="first-Header">Welcome to</h3>
+<h1 class="main-header">Credit Card Management System</h1>
+<div class="seperator"></div>
+<br>
+<br>
 <app-credit-card-list></app-credit-card-list>
