--- a/src/app/credit-card/credit-card-list/credit-card-list.component.html
+++ b/src/app/credit-card/credit-card-list/credit-card-list.component.html
@@ -1,11 +1,20 @@
-<p>credit-card-list works!</p>
-	<ul>
-		<li *ngFor="let creditcard of creditcards$ |async; let i = index">
-			<div class="cards">
-				<a>Card number: </a>
-				<a [routerLink]="['../creditcards', i]" [state]="creditcard">{{creditcard.card_number}}</a>
-				<p>Cardholder: {{creditcard.cardholder_name}}</p>
-				<p>Card issuer: {{creditcard.issuer}}</p>
-			</div>
-		</li>
-	</ul>
+<div class="page">
+  <h1>Credit cards</h1>
+  <div class="list">
+    <div class="list-header">
+      <div class="text">Cardholder</div>
+      <div class="number-text">Card number</div>
+      <div class="issuer-text">Card issuer</div>
+    </div>
+    <div class="seperator"></div>
+    <div>
+      <a *ngFor="let creditcard of creditcards$ |async; let i = index" class="card-item"
+        [routerLink]="['../creditcards', i]" [state]="creditcard">
+        <p class="name-column">{{creditcard.cardholder_name}}</p>
+        <p class="number-column">{{creditcard.card_number}} </p>
+        <p class="issuer-column">{{creditcard.issuer}}</p>
+      </a>
+    </div>
+
+  </div>
+</div>
