--- a/src/app/credit-card/credit-card-list/credit-card-list.component.scss
+++ b/src/app/credit-card/credit-card-list/credit-card-list.component.scss
@@ -1,11 +1,128 @@
-// .cards {
-//     // background-color: lightblue;
-//     // border-radius: 8px;
-//     // margin-bottom: 8px;
-//     // flex-wrap: wrap;
-//     // display: flex;
-//     // flex-direction: column;
-//     // align-content: space-between;
-//     // justify-content: flex-start;
-//     // align-items: flex-start;
-// }
+.page {
+  margin-left: 20px;
+}
+.seperator {
+  height: 1px;
+  width: 95%;
+  margin-left: 2.5%;
+  background-color: grey;
+  margin-bottom: 20px;
+}
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16pt;
+  text-transform: uppercase;
+}
+.card-content {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10pt;
+  margin: 0 4px;
+  color: black;
+}
+@media screen and (min-width: 769px) {
+  .wrapper {
+    display: grid;
+    grid-template-areas: "head head head"
+                        "name name name";
+  }
+  .list{
+    min-width: 500px;
+  }
+  .list-header {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12pt;
+    .text, .number-text {
+      width: 40%;
+    }
+    .issuer-text {
+      width: 20%
+    }
+  }
+  .card-item {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    padding: 4px;
+    margin-bottom: 8px;
+    box-shadow: 5px 5px 0px 0px #498787;
+    border: solid 2px #498787;
+    cursor: pointer;
+    color: black;
+    &:hover{
+      background-color: #5F9E9F;
+      color: white;
+    }
+    .name-column, .number-column {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 11pt;
+      width: 40%;
+    }
+    .issuer-column {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 11pt;
+      width: 20%;
+    }
+  }
+
+}
+
+@media screen and (max-width: 768px){
+  .wrapper {
+    display: grid;
+    grid-template-areas: "head head"
+                        "name name";
+  }
+  .list{
+    min-width: 280px;
+    margin-right: 20px;
+  }
+  .list-header {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12pt;
+    .text {
+      width: 50%;
+    }
+    .number-text {
+      width: 50%;
+      text-align: end;
+    }
+    .issuer-text {
+      display: none;
+    }
+  }
+  .card-item {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    padding: 4px;
+    margin-bottom: 8px;
+    box-shadow: 5px 5px 0px 0px #498787;
+    border: solid 2px #498787;
+    cursor: pointer;
+    color: black;
+    &:hover{
+      background-color: #5F9E9F;
+      color: white;
+    }
+    .name-column {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 11pt;
+      width: 50%;
+    }
+    .number-column {
+      text-align: end;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 11pt;
+      width: 50%;
+    }
+    .issuer-column {
+      display: none;
+    }
+  }
+}
