Add layout to credit card detail

--- a/src/app/credit-card/credit-card-details/credit-card-details.component.html
+++ b/src/app/credit-card/credit-card-details/credit-card-details.component.html
@@ -1,9 +1,38 @@
-<p>credit-card-details page</p>
-<div>
-     <h2>Card Number: {{creditCard.card_number}}</h2>
-     <p>Card Holder: {{creditCard.cardholder_name}}</p>
-     <p>csc code: {{creditCard.csc_code}}</p> 
-     <p>expiration date: {{creditCard.expiration_date_month}}/{{creditCard.expiration_date_year}}</p>
-     <p>Card issuer: {{creditCard.issuer}}</p>
+<div class="page">
+  <h2>Card Number: {{creditCard.card_number}}</h2>
+  <table>
+    <tr>
+      <td>
+        <p>Card Holder:</p>
+      </td>
+      <td>
+        <p>{{creditCard.cardholder_name}}</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>csc code:</p>
+      </td>
+      <td>
+        <p >{{creditCard.csc_code}}</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>Expiration date:</p>
+      </td>
+      <td>
+        <p>{{creditCard.expiration_date_month}}/{{creditCard.expiration_date_year}}</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>Card issuer::</p>
+      </td>
+      <td>
+        <p>{{creditCard.issuer}}</p>
+      </td>
+    </tr>
+  </table>
+     <button class="delete-btn" (click)="deleteCard()">Delete Card</button>
 </div>
-<button (click)="deleteCard()">Delete Card</button>
