--- a/src/app/credit-card/credit-card-list/credit-card-list.component.scss
+++ b/src/app/credit-card/credit-card-list/credit-card-list.component.scss
@@ -22,10 +22,11 @@ h1 {
 @media screen and (min-width: 769px) {
   .wrapper {
     display: grid;
-    grid-template-areas: "head head head"
-                        "name name name";
+    grid-template-areas:
+      "head head head"
+      "name name name";
   }
-  .list{
+  .list {
     min-width: 500px;
   }
   .list-header {
@@ -34,11 +35,12 @@ h1 {
     margin-bottom: 20px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
-    .text, .number-text {
+    .text,
+    .number-text {
       width: 40%;
     }
     .issuer-text {
-      width: 20%
+      width: 20%;
     }
   }
   .card-item {
@@ -51,11 +53,12 @@ h1 {
     border: solid 2px #498787;
     cursor: pointer;
     color: black;
-    &:hover{
-      background-color: #5F9E9F;
+    &:hover {
+      background-color: #5f9e9f;
       color: white;
     }
-    .name-column, .number-column {
+    .name-column,
+    .number-column {
       font-family: Arial, Helvetica, sans-serif;
       font-size: 11pt;
       width: 40%;
@@ -66,16 +69,16 @@ h1 {
       width: 20%;
     }
   }
-
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .wrapper {
     display: grid;
-    grid-template-areas: "head head"
-                        "name name";
+    grid-template-areas:
+      "head head"
+      "name name";
   }
-  .list{
+  .list {
     min-width: 280px;
     margin-right: 20px;
   }
@@ -106,8 +109,8 @@ h1 {
     border: solid 2px #498787;
     cursor: pointer;
     color: black;
-    &:hover{
-      background-color: #5F9E9F;
+    &:hover {
+      background-color: #5f9e9f;
       color: white;
     }
     .name-column {
@@ -125,19 +128,20 @@ h1 {
       display: none;
     }
   }
-// .cards {
-//     // background-color: lightblue;
-//     // border-radius: 8px;
-//     // margin-bottom: 8px;
-//     // flex-wrap: wrap;
-//     // display: flex;
-//     // flex-direction: column;
-//     // align-content: space-between;
-//     // justify-content: flex-start;
-//     // align-items: flex-start;
-// }
+  // .cards {
+  //     // background-color: lightblue;
+  //     // border-radius: 8px;
+  //     // margin-bottom: 8px;
+  //     // flex-wrap: wrap;
+  //     // display: flex;
+  //     // flex-direction: column;
+  //     // align-content: space-between;
+  //     // justify-content: flex-start;
+  //     // align-items: flex-start;
+  // }
 
-.overview-header {
+  .overview-header {
     display: flex;
     justify-content: space-evenly;
+  }
 }
